# LIME

./: README.en.md  README.md
LIME UI版/: 28.pro  28.pro.user.7cef386  READMD.md  RES.qrc  abc.cpp  abc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LIME 代码纯享版/: CMakeLists.txt  READMD.md
LIME 代码纯享版/src/: Gt.h  LIME.h  main.cpp
